fix spacing

--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -30,7 +30,7 @@
 .about-ting {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 
   .ting-button-wrapper {
     position: absolute;
