--- a/app/assets/stylesheets/components/info_cards.scss
+++ b/app/assets/stylesheets/components/info_cards.scss
@@ -10,7 +10,6 @@
   vertical-align: top;
   margin: 10px;
   padding: 20px;
-  min-height: 400px;
   width: 100%;
   border-radius: 12px;
   box-shadow: 2px 4px 6px 0 rgba(0,0,0,0.5);
